--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Be My Valentine</title>
+  <title>For Ritika ❤️</title>
   <style>
     body {
       display: flex;
@@ -10,24 +10,29 @@
       align-items: center;
       height: 100vh;
       background: linear-gradient(135deg, #ff758c, #ff7eb3);
-      font-family: Arial, sans-serif;
+      font-family: 'Segoe UI', sans-serif;
       overflow: hidden;
     }
 
     .card {
       background: white;
-      padding: 30px;
+      padding: 35px;
       border-radius: 20px;
       text-align: center;
       box-shadow: 0 10px 25px rgba(0,0,0,0.2);
     }
 
     h1 {
-      color: #ff4d6d;
+      color: #ff2e63;
+    }
+
+    p {
+      font-size: 18px;
+      color: #444;
     }
 
     button {
-      padding: 10px 25px;
+      padding: 12px 28px;
       font-size: 18px;
       border: none;
       border-radius: 30px;
@@ -50,7 +55,13 @@
 <body>
 
   <div class="card">
-    <h1>Will you be my Valentine? 💖</h1>
+    <h1>Ritika ❤️</h1>
+    <p>
+      Jab se tum zindagi mein aayi ho,<br>
+      sab kuch aur bhi khoobsurat lagta hai ✨
+    </p>
+    <h2>Will you be my Valentine? 💖</h2>
+
     <button id="yes" onclick="goYes()">YES 😍</button>
     <button id="no">NO 😜</button>
   </div>
@@ -59,8 +70,8 @@
     const noBtn = document.getElementById("no");
 
     noBtn.addEventListener("mouseover", () => {
-      const x = Math.random() * (window.innerWidth - 100);
-      const y = Math.random() * (window.innerHeight - 50);
+      const x = Math.random() * (window.innerWidth - 120);
+      const y = Math.random() * (window.innerHeight - 60);
       noBtn.style.left = x + "px";
       noBtn.style.top = y + "px";
     });
