--- a/yes.html
+++ b/yes.html
@@ -53,20 +53,20 @@
     balki meri duniya ka sabse khoobsurat pal tha 25/may/2022 🥹<br><br>
 
     Tumhari hasi, tumhari baatein,<br>
-    Tumhari akhe, tumhara dill, tumhare sase...
+    Tumhari akhe, tumhara dill, tumhare sase...<br>
     aur tumhara saath — sab kuch special hai ✨<br><br>
 
-    Na smjho mujhe ki pyar nhi tumse 
-    Kase batau ki kitna pyar h tumse 
-    Na soya hu ase ratt koi 
-    Na utha hu ase subh koi 
-    Jab tum mere sath na hue 
-    Na socha asa din koi 
-    Na sochi ase rat koi 
-    Jab tum mere sath na hue 
-    Karta hu glyia maff kar do na 
-    Bacha hu tumhara abb to hath pakad lo na 
-    Tere se din tere se h ratt mere 
+    Na smjho mujhe ki pyar nhi tumse<br> 
+    Kase batau ki kitna pyar h tumse <br>
+    Na soya hu ase ratt koi<br> 
+    Na utha hu ase subh koi<br> 
+    Jab tum mere sath na hue<br> 
+    Na socha asa din koi<br> 
+    Na sochi ase rat koi<br> 
+    Jab tum mere sath na hue<br> 
+    Karta hu glyia maff kar do na<br> 
+    Bacha hu tumhara abb to hath pakad lo na<br> 
+    Tere se din tere se h ratt mere<br> 
     Na sochu asa din jab tum mere sath na hue 🥹🥹🥹🥹🥹🥹<br><br>
   </p>
 
